# blazar

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.template.yml
.github/workflows/: cicd.yml
src/: config.rs  errors.rs  extractors.rs  main.rs  middleware.rs  models.rs  nonce.rs
src/handlers/: health.rs  mod.rs  nonce.rs  send.rs
src/queue/: mod.rs
src/smtp/: mod.rs
